--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ volumes:
 
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8
     volumes:
       - "mysql-data:/var/lib/mysql"
     environment:
       MYSQL_ROOT_PASSWORD: "my-secret-pw"
 
   mysqlbackup:
-    image: jorgeandrada/openshift-automysqlbackup:alpin
+    image: jorgeandrada/openshift-automysqlbackup:debian
     volumes:
       - "mysql-backups-data:/backup"
     environment:
